--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "express-session": "^1.14.0",
     "helmet": "^1.3.0",
+    "loopback": "https://github.com/strongloop/loopback.git#2.x",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
-    "serve-favicon": "^2.0.1",
+    "loopback-context": "git+https://github.com/azatoth/loopback-context.git#cls_hooked",
     "loopback-datasource-juggler": "^2.39.0",
-    "loopback": "^2.22.0"
+    "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^2.5.3",
